hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__if_false_branch_returns_to_val.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Ok(
    Hir {
        identifiers: [
            IdentId(0) => "<root>",
            IdentId(1) => "f",
            IdentId(2) => "boolean",
            IdentId(3) => "n",
            IdentId(4) => "core",
            IdentId(5) => "eq",
            IdentId(6) => "add",
            IdentId(7) => "div",
            IdentId(8) => "ge",
            IdentId(9) => "gt",
            IdentId(10) => "le",
            IdentId(11) => "lt",
            IdentId(12) => "mul",
            IdentId(13) => "neg",
            IdentId(14) => "neq",
            IdentId(15) => "number",
            IdentId(16) => "sub",
            IdentId(17) => "void",
        ],
        identifier_refs: [
            IdentRefId(0) => IdentifierRef {
                id: IdentRefId(0),
                ident: Identifier {
                    id: IdentId(2),
                    span: 2:22; [22, 29],
                    bound: Bound(5),
                },
            },
            IdentRefId(1) => IdentifierRef {
                id: IdentRefId(1),
                ident: Identifier {
                    id: IdentId(3),
                    span: 4:17; [77, 78],
                    bound: Bound(20),
                },
            },
            IdentRefId(2) => IdentifierRef {
                id: IdentRefId(2),
                ident: Identifier {
                    id: IdentId(3),
                    span: 9:27; [216, 217],
                    bound: Bound(20),
                },
            },
            IdentRefId(3) => IdentifierRef {
                id: IdentRefId(3),
                ident: Identifier {
                    id: IdentId(5),
                    span: 9:24; [213, 215],
                    bound: Bound(15),
                },
            },
        ],
        expressions: [
            ExprId(0) => Expression {
                id: ExprId(0),
                kind: Literal(
                    Literal {
                        kind: Number(0),
                        span: 3:25; [58, 59],
                    },
                ),
                span: 3:25; [58, 59],
                typed: Typed(4),
            },
            ExprId(1) => Expression {
                id: ExprId(1),
                kind: Literal(
                    Literal {
                        kind: Boolean(true),
                        span: 4:24; [84, 88],
                    },
                ),
                span: 4:24; [84, 88],
                typed: Typed(3),
            },
            ExprId(2) => Expression {
                id: ExprId(2),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 5:21; [111, 113],
                    },
                ),
                span: 5:21; [111, 113],
                typed: Typed(4),
            },
            ExprId(3) => Expression {
                id: ExprId(3),
                kind: Block(
                    [
                        StmtId(2),
                    ],
                ),
                span: 4:29; [89, 132],
                typed: Typed(4),
            },
            ExprId(4) => Expression {
                id: ExprId(4),
                kind: Literal(
                    Literal {
                        kind: Boolean(false),
                        span: 7:25; [164, 169],
                    },
                ),
                span: 7:25; [164, 169],
                typed: Typed(3),
            },
            ExprId(5) => Expression {
                id: ExprId(5),
                kind: Block(
                    [
                        StmtId(3),
                    ],
                ),
                span: 6:24; [138, 188],
                typed: Typed(2),
            },
            ExprId(6) => Expression {
                id: ExprId(6),
                kind: If(
                    ExprId(1),
                    ExprId(3),
                    Some(
                        ExprId(5),
                    ),
                ),
                span: 4:21; [81, 188],
                typed: Typed(4),
            },
            ExprId(7) => Expression {
                id: ExprId(7),
                kind: Assignment(
                    Direct(
                        IdentRefId(1),
                    ),
                    ExprId(6),
                ),
                span: 4:17; [77, 188],
                typed: Typed(4),
            },
            ExprId(8) => Expression {
                id: ExprId(8),
                kind: Literal(
                    Literal {
                        kind: Number(42),
                        span: 9:21; [210, 212],
                    },
                ),
                span: 9:21; [210, 212],
                typed: Typed(4),
            },
            ExprId(9) => Expression {
                id: ExprId(9),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(2),
                        span: 9:27; [216, 217],
                    },
                ),
                span: 9:27; [216, 217],
                typed: Typed(4),
            },
            ExprId(10) => Expression {
                id: ExprId(10),
                kind: FunctionCall(
                    ExprId(12),
                    [
                        ExprId(8),
                        ExprId(9),
                    ],
                ),
                span: 9:21; [210, 217],
                typed: Typed(3),
            },
            ExprId(11) => Expression {
                id: ExprId(11),
                kind: Block(
                    [
                        StmtId(1),
                        StmtId(4),
                        StmtId(5),
                    ],
                ),
                span: 2:32; [32, 232],
                typed: Typed(2),
            },
            ExprId(12) => Expression {
                id: ExprId(12),
                kind: Literal(
                    Literal {
                        kind: IdentRefId(3),
                        span: 9:24; [213, 215],
                    },
                ),
                span: 9:24; [213, 215],
                typed: Typed(7),
            },
        ],
        statements: [
            StmtId(0) => Statement {
                id: StmtId(0),
                kind: Namespace(
                    Identifier {
                        id: IdentId(0),
                        span: 0:0; [0, 0],
                        bound: Bound(1),
                    },
                    InputId(0),
                    [
                        StmtId(6),
                        StmtId(7),
                    ],
                ),
                span: 0:0; [0, 0],
            },
            StmtId(1) => Statement {
                id: StmtId(1),
                kind: Let(
                    Identifier {
                        id: IdentId(3),
                        span: 3:21; [54, 55],
                        bound: Bound(20),
                    },
                    ExprId(0),
                ),
                span: 3:17; [50, 60],
            },
            StmtId(2) => Statement {
                id: StmtId(2),
                kind: Expression(
                    ExprId(2),
                ),
                span: 5:21; [111, 114],
            },
            StmtId(3) => Statement {
                id: StmtId(3),
                kind: Ret(
                    Some(
                        ExprId(4),
                    ),
                    Explicit,
                ),
                span: 7:21; [160, 170],
            },
            StmtId(4) => Statement {
                id: StmtId(4),
                kind: Expression(
                    ExprId(7),
                ),
                span: 4:17; [77, 189],
            },
            StmtId(5) => Statement {
                id: StmtId(5),
                kind: Ret(
                    Some(
                        ExprId(10),
                    ),
                    Explicit,
                ),
                span: 9:17; [206, 218],
            },
            StmtId(6) => Statement {
                id: StmtId(6),
                kind: LetFn(
                    Identifier {
                        id: IdentId(1),
                        span: 2:17; [17, 18],
                        bound: Bound(19),
                    },
                    [],
                    [],
                    Return {
                        type_def_id: Some(
                            TypeDefId(0),
                        ),
                        typed: Typed(3),
                    },
                    Provided(
                        ExprId(11),
                    ),
                    None,
                ),
                span: 2:13; [13, 232],
            },
            StmtId(7) => Statement {
                id: StmtId(7),
                kind: Namespace(
                    Identifier {
                        id: IdentId(4),
                        span: 12:11; [253, 257],
                        bound: Bound(2),
                    },
                    InputId(0),
                    [],
                ),
                span: 12:17; [259, 260],
            },
        ],
        type_defs: [
            TypeDefId(0) => TypeDef {
                kind: Simple(
                    [
                        IdentRefId(0),
                    ],
                ),
                span: 2:22; [22, 29],
            },
        ],
        root: StmtId(0),
        symbols: [
            SymbolId(0) => Symbol {
                id: SymbolId(0),
                kind: NotFound,
                type_id: TypeId(0),
            },
            SymbolId(1) => Symbol {
                id: SymbolId(1),
                kind: Namespace(
                    IdentId(0),
                    {
                        IdentId(1): [
                            SymbolId(19),
                        ],
                        IdentId(4): [
                            SymbolId(2),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(2) => Symbol {
                id: SymbolId(2),
                kind: Namespace(
                    IdentId(4),
                    {
                        IdentId(2): [
                            SymbolId(5),
                        ],
                        IdentId(5): [
                            SymbolId(15),
                            SymbolId(16),
                        ],
                        IdentId(6): [
                            SymbolId(18),
                        ],
                        IdentId(7): [
                            SymbolId(17),
                        ],
                        IdentId(8): [
                            SymbolId(14),
                        ],
                        IdentId(9): [
                            SymbolId(13),
                        ],
                        IdentId(10): [
                            SymbolId(12),
                        ],
                        IdentId(11): [
                            SymbolId(11),
                        ],
                        IdentId(12): [
                            SymbolId(10),
                        ],
                        IdentId(13): [
                            SymbolId(9),
                        ],
                        IdentId(14): [
                            SymbolId(7),
                            SymbolId(8),
                        ],
                        IdentId(15): [
                            SymbolId(4),
                        ],
                        IdentId(16): [
                            SymbolId(6),
                        ],
                        IdentId(17): [
                            SymbolId(3),
                        ],
                    },
                ),
                type_id: TypeId(1),
            },
            SymbolId(3) => Symbol {
                id: SymbolId(3),
                kind: NativeType(
                    IdentId(17),
                    Void,
                ),
                type_id: TypeId(2),
            },
            SymbolId(4) => Symbol {
                id: SymbolId(4),
                kind: NativeType(
                    IdentId(15),
                    Number,
                ),
                type_id: TypeId(2),
            },
            SymbolId(5) => Symbol {
                id: SymbolId(5),
                kind: NativeType(
                    IdentId(2),
                    Boolean,
                ),
                type_id: TypeId(2),
            },
            SymbolId(6) => Symbol {
                id: SymbolId(6),
                kind: Native(
                    IdentId(16),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    SubNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(7) => Symbol {
                id: SymbolId(7),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    NeqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(8) => Symbol {
                id: SymbolId(8),
                kind: Native(
                    IdentId(14),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    NeqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(9) => Symbol {
                id: SymbolId(9),
                kind: Native(
                    IdentId(13),
                    [
                        TypeId(4),
                    ],
                    TypeId(4),
                    NegNumber,
                ),
                type_id: TypeId(9),
            },
            SymbolId(10) => Symbol {
                id: SymbolId(10),
                kind: Native(
                    IdentId(12),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    MulNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(11) => Symbol {
                id: SymbolId(11),
                kind: Native(
                    IdentId(11),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(12) => Symbol {
                id: SymbolId(12),
                kind: Native(
                    IdentId(10),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    LeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(13) => Symbol {
                id: SymbolId(13),
                kind: Native(
                    IdentId(9),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GtNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(14) => Symbol {
                id: SymbolId(14),
                kind: Native(
                    IdentId(8),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    GeNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(15) => Symbol {
                id: SymbolId(15),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(3),
                    EqNumberNumber,
                ),
                type_id: TypeId(7),
            },
            SymbolId(16) => Symbol {
                id: SymbolId(16),
                kind: Native(
                    IdentId(5),
                    [
                        TypeId(3),
                        TypeId(3),
                    ],
                    TypeId(3),
                    EqBooleanBoolean,
                ),
                type_id: TypeId(8),
            },
            SymbolId(17) => Symbol {
                id: SymbolId(17),
                kind: Native(
                    IdentId(7),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    DivNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(18) => Symbol {
                id: SymbolId(18),
                kind: Native(
                    IdentId(6),
                    [
                        TypeId(4),
                        TypeId(4),
                    ],
                    TypeId(4),
                    AddNumberNumber,
                ),
                type_id: TypeId(6),
            },
            SymbolId(19) => Symbol {
                id: SymbolId(19),
                kind: LetFn(
                    IdentId(1),
                    StmtId(6),
                    [],
                    TypeId(3),
                ),
                type_id: TypeId(10),
            },
            SymbolId(20) => Symbol {
                id: SymbolId(20),
                kind: Let(
                    IdentId(3),
                    StmtId(1),
                ),
                type_id: TypeId(4),
            },
        ],
        types: [
            TypeId(0) => Invalid,
            TypeId(1) => Void,
            TypeId(2) => None,
            TypeId(3) => Boolean,
            TypeId(4) => Number,
            TypeId(5) => Type,
            TypeId(6) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(7) => Function(
                [
                    TypeId(4),
                    TypeId(4),
                ],
                TypeId(3),
            ),
            TypeId(8) => Function(
                [
                    TypeId(3),
                    TypeId(3),
                ],
                TypeId(3),
            ),
            TypeId(9) => Function(
                [
                    TypeId(4),
                ],
                TypeId(4),
            ),
            TypeId(10) => Function(
                [],
                TypeId(3),
            ),
        ],
        exit_points: ExitPoints {
            exit_points: {
                ExprId(11): [
                    Explicit(
                        Some(
                            ExprId(4),
                        ),
                    ),
                    Explicit(
                        Some(
                            ExprId(10),
                        ),
                    ),
                ],
            },
            unreachable: [],
        },
    },
)
